--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="wrapper">
 		 <div class="form">
-		 	<form action="#" id="form" class="form__body">
+		 	<form action="sendmail.php" id="form" class="form__body">
 		 		<h1>Отправка данных на почту</h1>
 		 		<div class="form__item">
 		 			<label class="form__label" for="formName"> Имя*</label>
